--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>com.iotmining</groupId>
 		<artifactId>microservices</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<!--		<relativePath/> &lt;!&ndash; Ensure this is set &ndash;&gt;-->
 	</parent>
 	<artifactId>notification</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -32,6 +31,15 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<dependency>
